--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "express-rate-limit": "^5.2.3",
     "fast-csv": "^4.3.5",
     "mongoose": "^5.10.15"
   }
